--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,4 @@
+
 @media screen and (max-width: 1400px) {
 
 :root
@@ -487,6 +488,7 @@ ul.ftrsocial
     --size-20: 20px;
     --size-24: 18px;
     --size-30: 24px;
+    --size-32: 32px;
     --size-40: 36px;
     --size-48: 40px;
     --size-80: 48px;
@@ -500,6 +502,18 @@ body
 {
     min-height: 700px;
 }
+
+	/* Keep hero video anchored to bottom on small screens */
+	.hmefstcontsec video {
+	    object-position: bottom center;
+	}
+
+	/* Stronger, page-specific anchor for this hero */
+	.mobinnerfstcontsec video {
+	    object-position: 50% 100% !important; /* center x, bottom y */
+	}
+
+
 .hmefstdatasec
 {
     padding-top: 35px;
@@ -1003,7 +1017,12 @@ ul.ftrsocial li a
 {
     padding-bottom: 20px;
 }
-.fstrecipecontsec, .fstblogcontsec
+.fstrecipecontsec
+{
+    height: 100%;
+    padding-top: 100px;
+}
+.fstblogcontsec
 {
     height: 100%;
     padding-top: 100px;
@@ -1018,17 +1037,24 @@ ul.ftrsocial li a
     text-align: center;
 }
 .fstrecipecontsec::before {
-        background-size: 100% auto;
+       background: url(../images/mobribon01.png) no-repeat right top;
+       background-size: auto;
     }
 .fstrecipecontsec::after {
-        background-size: 100% auto;
+       background: url(../images/mobribon02.png) no-repeat right top;
+       background-size: auto;
     }
 .rytrecipecontsec img
 {
     max-width: 350px;
     bottom: -25px;
 }
-.sndrecipecontsec, .sndblogcontsec
+.sndrecipecontsec
+{
+	padding-top: 70px;
+    padding-bottom: 60px;
+}
+.sndblogcontsec
 {
     padding-top: 60px;
     padding-bottom: 60px;
@@ -1274,10 +1300,73 @@ ul.ftrsocial li a
 {
     margin-top: 10px;
 }
+.lftrecipecontsec h1
+{
+    font-size: var(--size-80);
+    max-width: 230px;
+    margin: 0 auto;
+}
+.lftrecipecontsec h2
+{
+    display: block;
+    font-size: var(--size-32);
+    color: var(--white);
+    font-family: var(--caveatbrush);
+    line-height: 1;
+    max-width: 300px;
+    margin: 0 auto;
+}
 
 }
 
 @media screen and (max-width: 479px) {
+
+    .hmefstdatasec .container .row
+{
+    align-items: top;
+    height: 100%;
+    padding-top: 22px;
+     
+}
+
+.mobilehide {
+    display: none; 
+}
+
+.mobilecolor {background: #F19D0C;}
+.mobilecolor3 {background: #33B2BB;
+}
+
+.mobileshow {  
+        display: inline;
+        position: absolute !important;
+       top:402px !important;
+       left: -288px!important;
+        
+         
+        width: 170%;
+        z-index: 1!important;
+     overflow: hidden;
+       
+
+ 
+    }  
+
+     
+
+.mobilehide {display: none;}
+
+
+
+.hmefstdatasec {
+    position: relative;
+    z-index: 9;
+    left: 0;
+    top: 50px;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
 
 .fstmodalbg
 {
@@ -1359,5 +1448,7 @@ ul.ftrsocial li a
 {
     background-position: 95% 215px;
 }
+
+
 
 }
