--- a/css/responsive.css
+++ b/css/responsive.css
@@ -197,7 +197,7 @@ body
 }
 
 @media screen and (max-width: 1024px) {
-
+ .mobilehidehomepage {display: none; }
 .container
 {
     max-width: 100%;
@@ -483,6 +483,8 @@ ul.ftrsocial
 
 @media screen and (max-width: 767px) {
 
+ .mobilehidehomepage {display: none; }
+
 :root
 {
     --size-20: 20px;
@@ -554,7 +556,11 @@ button.readall-button
     float: none;
     flex-direction: row;
     row-gap: 0;
+    margin-top: 50px;
 }
+
+
+
 .sglecommunitycontsec h5
 {
     line-height: 1.1;
@@ -1244,11 +1250,14 @@ ul.ftrsocial li a
 {
     position: absolute;
     right: 15px;
-    top: 55%;
+    top: 75%;
     z-index: 1;
     display: block;
     transform: translateY(-50%);
 }
+
+
+
 .hmefifthcontsec
 {
     padding-bottom: 50px;
@@ -1270,6 +1279,7 @@ ul.ftrsocial li a
 {
     text-align: center;
     font-size: var(--size-18);
+    line-height: normal;
 }
 .glutchapathimixfrthcontsec ul li
 {
@@ -1284,7 +1294,7 @@ ul.ftrsocial li a
 }
 .mobinnerpancakefstsec .hmefstdatasec h2
 {
-    margin-top: 60px;
+    margin-top: 20px;
 }
 .heartnarrowdiv h3
 {
@@ -1316,15 +1326,95 @@ ul.ftrsocial li a
     max-width: 300px;
     margin: 0 auto;
 }
-
+ .mobilehidehomepage {display: none; }
 }
 
 
 
-
-
-
 @media screen and (max-width: 479px) {
+ 
+   
+
+
+/*mobile desktopbanner */
+.mobilehidehomepage {display: none; }
+.mobileshowhomepage {display: block; }
+    .hmefstcontsec h1 {
+        line-height: 0.9;
+        max-width: 350px;
+        margin: 0 auto;
+        text-align: left;
+        font-size: 52px;
+        margin-left: 0px;
+        margin-top: 20px;
+        
+    }
+ .hmefstdatalftpart {display: block;}
+
+     .hmefstdatalftpart div {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: start;
+        margin-top: 20px;
+        gap: 10px;
+        margin-left: 0px;
+    }
+
+    .heartnarrowdiv {
+    
+    margin-top: 20px;
+}
+
+.arrow-icon {
+         
+        
+    }
+    .funfact
+{
+    justify-content: flex-end;
+    flex-direction: column;
+   margin-top: 120px;
+}
+
+.homecolor {background: #F19D0C;}
+
+.hmefstcontsec video {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -2;
+    margin-top: 60px;
+}
+
+.heartnarrowdiv {
+    background-image: none;
+    background-repeat: no-repeat;
+    background-position: left top;
+    padding: 90px 0 0 0;
+}
+
+    .hmefstdatarytpart {
+        max-width: 100%;
+        float: none;
+        flex-direction: column;  
+        row-gap: 0;
+         margin-top: 0px;  
+        align-content: flex-start;
+    }
+
+    a.modalbutton {
+    z-index: 1;
+    position: relative;
+    margin-top: 30px;
+}
+
+
+/*mobile desktopbanner end */
+
+
+
 
     .hmefstdatasec .container .row
 {
@@ -1355,16 +1445,20 @@ ul.ftrsocial li a
  
     }  
 
+        .bluetickicon {
+        position: absolute;
+        right: 15px;
+        top: 92%;
+        z-index: 1;
+        display: block;
+        transform: translateY(-50%);
+    }
+
      
 
 .mobilehide {display: none;}
 
-.funfact
-{
-    justify-content: flex-end;
-    flex-direction: column;
-   margin-top: 50px;
-}
+
 
  
      
@@ -1381,7 +1475,10 @@ ul.ftrsocial li a
     width: 100%;
     height: 100%;
     overflow: hidden;
+    
 }
+
+
 
 .fstmodalbg
 {
@@ -1540,7 +1637,7 @@ ul.ftrsocial li a
 .mobileshow {  
         display: inline;
         position: absolute !important;
-       top:465px !important;
+       top:467px !important;
        left: -250px!important;
         
          
