--- a/css/style.css
+++ b/css/style.css
@@ -1746,3 +1746,31 @@ a.modalbutton
 
 .mobileshowhomepage {display: none;}
 .mobilehidehomepage{display: block;}
+
+
+.buttons {
+    max-width: fit-content;
+    background: var(--hibiscus);
+    width: auto;
+    line-height: 60px;
+    font-size: var(--size-24);
+    font-weight: normal;
+    color: var(--white);
+    display: block;
+    text-align: center;
+    border-radius: 30px;
+    transition: var(--transition);
+    padding: 0 40px;
+}
+
+.para{
+    padding-top: 20px;
+    padding-bottom:20px ;
+}
+
+.blogpostcontparts h2{
+ color: orange;
+}
+
+
+
