--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1349,7 +1349,19 @@ ul.ftrsocial li a
 @media screen and (max-width: 479px) {
  
    
-
+.fstblogcontsec::before
+{
+    background: url(../images/blogbgbefore.png) no-repeat right top;
+    background-size: auto 100%;
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    background-position: 300px;
+}
 
 /*mobile desktopbanner */
 .mobilehidehomepage {display: none; }
